# Helenium

./: .gitattributes  .gitignore  Cargo.toml  Config.json  Config.toml  README.md  new_service.bat  new_service.sh  rustfmt.toml  test_ed25519.key  todo.md
assets/presets/: executor.txt  heleny.txt  persona.txt  planner.txt
assets/tool-resource/: obs赫蕾妮-通用.json
assets/tools/: SQLite.json  arxiv-mcp-server.json  comfyui-old.json  comfyui.json  danbooru-tags.json  dockerhub.json  duckduckgo.json  excel.json  file.json  filesystem.json  julia.json  markitdown.json  mcp-code-interpreter.json  mcp-server-chart.json  minecraft-wiki.json  node-code-sandbox.json  none.json  opendia.json  paper-search.json  ppt.json  puppeteer.json  qq.json  rust-mcp-filesystem.json  sandbox.json  schedule.json  scheduler.json  semgrep.json  wikipedia-mcp.json  word-document-server.json
heleny-bus/: Cargo.toml
heleny-bus/src/: endpoint.rs  lib.rs  midware.rs  monitor.rs
heleny-frontend/: Cargo.toml
heleny-gui/: Cargo.toml  todo.md
heleny-gui/src/: handle_resource.rs  handle_ws.rs  init_resource.rs  lib.rs  main.rs  set_callback.rs  terminal.rs  tests.rs
heleny-gui/src/handle_resource/: handle_display_messages.rs  handle_image.rs  handle_schedules.rs  handle_slint_health.rs  handle_slint_schedules.rs  handle_task_abstract.rs  handle_task_logs.rs  handle_tool_abstracts.rs  handle_total_bus_traffic.rs
heleny-gui/ui/: app.slint  approvals.slint  chat.slint  schedule.slint  tasks.slint  terminal.slint  tools.slint  utils.slint
heleny-kernel/: Cargo.toml
heleny-kernel/src/: bus.rs  command.rs  health.rs  kernel.rs  kernel_service.rs  lib.rs  service.rs
heleny-kernel/src/service/: cal_deps.rs  handle_status.rs  test_order.rs
heleny-macros/: Cargo.toml
heleny-macros/src/: lib.rs
heleny-proto/: Cargo.toml
heleny-proto/src/: auth_service_message.rs  bridge_service_message.rs  chat_model.rs  common_message.rs  config_service_message.rs  file.rs  frontend_message.rs  frontend_type.rs  fs_service_message.rs  gui_service_message.rs  health.rs  kernel_message.rs  kernel_service_message.rs  lib.rs  llm_api.rs  mcp.rs  memory.rs  message.rs  model_response_schema.rs  name.rs  process.rs  resource.rs  role.rs  schedule.rs  service_handle.rs  task_info.rs  tool.rs  tool_description.rs  tool_manual.rs  user_decision.rs
heleny-server/: Cargo.toml
heleny-server/src/: lib.rs  main.rs
heleny-service/: Cargo.toml
heleny-service/src/: lib.rs  messages.rs  utils.rs
heleny-service/src/messages/: admin_command.rs  auth_service_message.rs  chat_service_message.rs  common_message.rs  config_service_message.rs  docker_service_message.rs  embed_service_message.rs  fs_service_message.rs  hub_service_message.rs  kernel_message.rs  kernel_service_message.rs  mcp_service_message.rs  memory_service_message.rs  mod.rs  process_service_message.rs  schedule_service_message.rs  stats_service_message.rs  task_service_message.rs  test_service_message.rs  toolkit_service_message.rs  tools_service_message.rs  user_service_message.rs  webui_service_message.rs
heleny-utils/: Cargo.toml
heleny-utils/src/: lib.rs
heleny-webui/: README.md  index.html  package-lock.json  package.json
heleny-webui/src/: App.vue  main.ts  router.ts  store.ts
heleny-webui/src/views/: ApprovalsView.vue  ChatView.vue  ConsoleView.vue  LogsView.vue  ScheduleView.vue  SettingsView.vue  TasksView.vue  TerminalView.vue  ToolsView.vue
script/: Cargo.toml  duckduckgo.json  mcp.json  new_service.bat  new_service.ps1  new_service.sh  publish.sh  push.bat  push.ps1
service-auth/: Cargo.toml
service-auth/src/: auth_config.rs  config.rs  lib.rs  tests.rs
service-bridge/: Cargo.toml
service-bridge/src/: lib.rs
service-chat/: Cargo.toml
service-chat/src/: backend.rs  chat_config.rs  config.rs  lib.rs  model.rs  tests.rs
service-chat/src/backend/: async_openai_backend.rs  gemini_rust_backend.rs
service-config/: Cargo.toml
service-config/src/: lib.rs
service-docker/: Cargo.toml
service-docker/src/: lib.rs  tests.rs
service-embed/: Cargo.toml
service-embed/src/: lib.rs
service-fs/: Cargo.toml
service-fs/src/: cache_entry.rs  config.rs  lib.rs  tool.rs
service-gui/: Cargo.toml
service-gui/src/: lib.rs
service-hub/: Cargo.toml
service-hub/src/: lib.rs  provider.rs
service-mcp/: Cargo.toml
service-mcp/src/: config.rs  lib.rs  tool.rs
service-memory/: Cargo.toml
service-memory/src/: config.rs  lib.rs  memory_config.rs  memory_db.rs
service-process/: Cargo.toml
service-process/src/: lib.rs  tests.rs
service-schedule/: Cargo.toml
service-schedule/src/: config.rs  lib.rs  tool.rs
service-stats/: Cargo.toml
service-stats/src/: bus_watcher.rs  config.rs  lib.rs  stats_config.rs
service-task/: Cargo.toml
service-task/src/: config.rs  lib.rs  task.rs  task_config.rs  task_logger.rs
service-test/: Cargo.toml
service-test/src/: lib.rs
service-toolkit/: Cargo.toml
service-toolkit/src/: config.rs  lib.rs  toolkit_config.rs
service-tools/: Cargo.toml
service-tools/src/: comfyui.rs  config.rs  lib.rs
service-user/: Cargo.toml
service-user/src/: lib.rs  user.rs
service-webui/: Cargo.toml
service-webui/src/: command.rs  config.rs  lib.rs  message.rs  register.rs  webui_config.rs
service-webui/src/command/: handle_get_history.rs  handle_get_image.rs  handle_toggle_task_logs.rs
tests/: Cargo.toml
tests/src/: test_auth.rs  test_fs.rs  test_hub.rs  test_stats.rs
