[workspace]
members = [ "heleny-bus", "heleny-kernel", "heleny-macros", "heleny-proto", "heleny-server", "heleny-service", "heleny-utils", "script", "service-auth", "service-bridge", "service-chat", "service-config", "service-fs", "service-hub", "service-memory", "service-stats", "service-user", "service-webui", "tests"]
resolver = "3"

[workspace.dependencies]
serde = {version = "1.0.228", features = ["derive"]}
serde_json = {version = "1.0.147"}
tokio = {version = "1.48.0", features = ["macros", "time","rt-multi-thread","sync","fs"]}
dotenvy = "0.15.7"
inventory = "0.3.21"
async-trait = "0.1.89"
anyhow = "1.0.100"
uuid = { version = "1.19.0", features = ["v4"] }
tracing ="0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"
chrono = {version = "0.4.42",features = ["serde"]}
ed25519-dalek = {version = "2.2.0",features = ["rand_core","pem"]}
rand = "0.8.5"
axum = {version = "0.8.8",features = ["ws"]}
tower-http = { version = "0.6.8", features = ["fs"] }
open = "5.3.3"
async-openai = {version = "0.31.1",features = ["_api","responses","chat-completion"]}
tokio-stream = "0.1.17"
sqlx = {version = "0.8.6",features = ["sqlite","runtime-tokio","chrono"]}