[package]
name = "heleny-gui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = {version = "1.14.1"}
tokio = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio-tungstenite = {workspace = true}
futures={workspace = true}
tungstenite = {workspace = true}
heleny_utils = {path = "../heleny-utils"}
tracing ={ workspace = true}
dotenvy = {workspace = true}
heleny_proto = {path = "../heleny-proto"}
chrono ={workspace = true}
image = {workspace = true}
base64 = {workspace = true}
uuid = {workspace = true}
heleny_server ={path = "../heleny-server"}

[build-dependencies]
slint-build = "1.14.1"
