[package]
name = "heleny_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
inventory = { workspace = true }
heleny_macros = { path = "../heleny-macros" }
heleny_service = { path = "../heleny-service" }
heleny_bus ={ path = "../heleny-bus"}
uuid ={ workspace = true }
heleny_proto ={ path = "../heleny-proto"}
service_config ={ path = "../service-config"}
tracing = { workspace = true }