[package]
name = "heleny_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
inventory = { workspace = true }
heleny_macros = { path = "../heleny-macros" }
heleny_service = { path = "../heleny-service" }
heleny_bus ={ path = "../heleny-bus"}
uuid ={ workspace = true }
heleny_proto ={ path = "../heleny-proto"}
service_config ={ path = "../service-config"}
tracing = { workspace = true }
chrono = {workspace = true}
service_fs ={ path = "../service-fs"}
service_auth ={ path = "../service-auth"}
service_stats ={ path = "../service-stats"}
service_user ={ path = "../service-user"}
service_hub ={ path = "../service-hub"}
service_webui ={ path = "../service-webui"}
service_chat ={ path = "../service-chat"}
service_memory ={ path = "../service-memory"}
service_task ={ path = "../service-task"}
service_toolkit ={ path = "../service-toolkit"}
service_test ={ path = "../service-test"}
service_schedule ={ path = "../service-schedule"}
service_mcp ={ path = "../service-mcp"}
service_docker ={ path = "../service-docker"}
service_process ={ path = "../service-process"}
service_tools ={ path = "../service-tools"}