[package]
name = "heleny_proto"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid ={ workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = {workspace = true}
chrono = {workspace = true}
tracing = { workspace = true }
serde = {workspace = true}
async-trait = {workspace = true}
heleny_macros = {path = "../heleny-macros"}
tungstenite = {workspace = true}
image = {workspace = true}
itertools = {workspace = true}
rkyv = {workspace = true}