[package]
name = "heleny_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
heleny_bus ={ path = "../heleny-bus"}
heleny_proto ={ path = "../heleny-proto"}
inventory ={ workspace = true}
tracing = { workspace = true }
serde_json = {workspace = true}
serde = {workspace = true}
ed25519-dalek = {workspace = true}
chrono = {workspace = true}
async-openai = {workspace = true}
uuid = {workspace = true}
image = {workspace = true}