[package]
name = "script"
version = "0.1.0"
edition = "2024"

[[bin]]

name="new_service"
path="src/bin/new_service.rs"

[[bin]]

name="mcp_tools"
path="src/bin/mcp_tools.rs"

[dependencies]
tokio ={ workspace = true}
anyhow = {workspace = true}
heleny_service = {path = "../heleny-service"}
heleny_proto = {path = "../heleny-proto"}
heleny_macros = { path = "../heleny-macros" }
heleny_bus = { path = "../heleny-bus" }
async-trait = { workspace = true }
inventory = { workspace = true }
tracing = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
