[package]
name = "service_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
heleny_service = {path = "../heleny-service"}
heleny_proto = {path = "../heleny-proto"}
heleny_macros = { path = "../heleny-macros" }
heleny_bus = { path = "../heleny-bus" }
async-trait = { workspace = true }
inventory = { workspace = true }
anyhow = {workspace = true}
tracing = {workspace = true}
tokio = {workspace = true}

serde = {workspace = true}
rand = {workspace = true}
ed25519-dalek = {workspace = true}
serde_json = {workspace = true}

[dev-dependencies]
dotenvy = {workspace = true}