[package]
name = "service_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
heleny_service = {path = "../heleny-service"}
heleny_proto = {path = "../heleny-proto"}
heleny_macros = { path = "../heleny-macros" }
heleny_bus = { path = "../heleny-bus" }
async-trait = { workspace = true }
inventory = { workspace = true }
anyhow = {workspace = true}
tracing = {workspace = true}
tokio = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
async-openai = {version = "0.31.1",features = ["_api","responses","chat-completion","embedding"]}
genai = "0.5.0"
reqwest = {workspace = true}
gemini-rust = "1.6.1"

[dev-dependencies]
dotenvy = {workspace = true}
tokio-stream = {workspace = true}
