[package]
name = "service_embed"
version = "0.1.0"
edition = "2024"

[dependencies]
heleny_service = {path = "../heleny-service"}
heleny_proto = {path = "../heleny-proto"}
heleny_macros = { path = "../heleny-macros" }
heleny_bus = { path = "../heleny-bus" }
async-trait = { workspace = true }
inventory = { workspace = true }
anyhow = {workspace = true}
tracing = {workspace = true}
tokio = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
hnsw_rs = "0.3.3"
rkyv = {workspace = true}