[package]
name = "service_webui"
version = "0.1.0"
edition = "2024"

[dependencies]
heleny_service = {path = "../heleny-service"}
heleny_proto = {path = "../heleny-proto"}
heleny_macros = { path = "../heleny-macros" }
heleny_bus = { path = "../heleny-bus" }
async-trait = { workspace = true }
inventory = { workspace = true }
anyhow = {workspace = true}
tracing = {workspace = true}
tokio = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
axum = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
tower-http = {workspace = true}
open ={ workspace = true}
base64 = {workspace = true}
tower = {workspace = true}